# Learn_Flask

./: .gitignore  notes.md
Andrei/: notes.md  server.py
Andrei/templates/: index.html
Flask-RESTful-section/: security.py  server.py
Jose/: deserializing.py
Jose/Flask-RESTful-section/: oldCode.md  security.py  server.py
Jose/REST_APIs_with_db/: data.db  server.py
Jose/SQL-alchemy-section/: data.db
Jose/Testing-First-Automated-Software-Test/: pyproject.toml
Jose/Token_Refreshing_Jwt_extended/: data.db  security.py  server.py
Jose/advanced_1/: data.db
Jose/advanced_email/: .env  .env.example  app.py  data.db  pyproject.toml
Jose/advanced_email/libs/: mailgun.py
Jose/advanced_email/models/: confirmation.py  user.py
Jose/advanced_email/resources/: confirmation.py  user.py
Jose/advanced_email/templates/: confirmation_page.html
Jose/advanced_email/tests/: test_advanced_email.py
Jose/advanced_marshmallow/: app.py  data.db  ma.py  pyproject.toml
Jose/advanced_marshmallow/models/: item.py  store.py  user.py
Jose/advanced_marshmallow/resources/: item.py  store.py  user.py
Jose/advanced_marshmallow/schemas/: item.py  user.py
Jose/store-rest-api/: app.py
Jose/testing-flask/: pyproject.toml
Jose/testing-flask/src/: app.py
Jose/testing-flask/tests/system/: base_test.py  test_home.py
REST_APIs_First/: server.py
REST_APIs_with_db/: create_tables.py  data.db  item.py  security.py  server.py  user.py
REST_APIs_with_db/sqlite_explore/: test.py
SQL-alchemy-section/: data.db  server.py
SQL-alchemy-section/models/: item.py  user.py
(+33 files in other folders)
