[tool.poetry]
name = "advanced_marshmallow"
version = "0.1.0"
description = ""
authors = ["Paweł Benkowski <pawlo97.pb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-restful = "^0.3.8"
flask-sqlalchemy = "^2.4.1"
flask-jwt-extended = "^3.24.1"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
